--- a/style.css
+++ b/style.css
@@ -188,6 +188,9 @@ footer .cp-right{
 
 }
 
+
+
+
 /*-------------------------------------------------------------------------------
 ------------------------lg d m q has to be done--------------------------------
 -------------------------------------------------------
@@ -228,7 +231,8 @@ footer .cp-right{
 		color: blue;
 		font-family: arial;
 		text-shadow: 4px 4px 6px #000;
-		background: beige;
+		background: lightskyblue;
+		margin: 0 5px;
 	}
 	footer .cp-right{
 		margin:4px 0 0 0;
@@ -242,6 +246,9 @@ footer .cp-right{
 	#pics{
 		flex-direction: column;
 		align-items: center;
+		letter-spacing: 1.4px;
+		font-weight: 450;
+		word-spacing: 1.8px;
 	}
 	section{
 		flex-direction: column;
@@ -261,8 +268,14 @@ footer .cp-right{
 	}
 	 #main-area{
 		padding: 10px;
+		letter-spacing: 1.4px;
+		font-weight: 450;
+		word-spacing: 1.8px;
 	}
 	.logo{
 		visibility: visible;
+	}
+	.btn{
+		border-radius: 8px;
 	}
 }
